# Recommendation-Systems-for-Personalized-Content-Discovery

./: .gitignore  README.md  app.py  presentation.pptx  pyproject.toml
configs/: default_config.yaml
notebooks/: 01_exploratory_data_analysis.ipynb
scripts/: run_baselines.py  run_cf.py  run_evaluation.py  run_explain.py  run_hybrid.py  run_mf.py  run_ncf.py
src/data/: build_features.py  make_dataset.py  run_eda.py
src/evaluation/: metrics.py
src/models/: baselines.py  collaborative_filtering.py  explainability.py  hybrid.py  matrix_factorization.py  ncf.py
